tmp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: silly-demo
  labels:
    app: silly-demo
spec:
  selector:
    matchLabels:
      app: silly-demo
  template:
    metadata:
      labels:
        app: silly-demo
    spec:
      containers:
      - name: silly-demo
        image: vfarcic/silly-demo:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 80m
            memory: 128Mi
