tmp/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: silly-demo
  labels:
    app: silly-demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: silly-demo
          servicePort: 80
    host: devopstoolkitseries.com
